The best changes in the world

--- a/index.html
+++ b/index.html
@@ -94,55 +94,8 @@
           <div class="home-blog clearfix">
             <ul>
 
-              <!-- Begin Student 1 -->
-              <li class="home-blog-post">
-                <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
-                  </a>
-                </div>
 
-                <div class="blog-title">
-                  <div class="big-comment">
-                    <h3>
-                      <a href="students/student_name.html">Student Name</a>
-                    </h3>
-                  </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
-                </div>
-                <div class="clear"></div>
 
-                <div class="excerpt">
-                  <p>Excerpt.</p>
-                </div>
-                <div class="clear"></div>
-              </li>
-              <!-- End Student 1 -->
-
-              <!-- Begin Student 2 -->
-              <li class="home-blog-post">
-                <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
-                  </a>
-                </div>
-
-                <div class="blog-title">
-                  <div class="big-comment">
-                    <h3>
-                      <a href="students/student_name.html">Student Name</a>
-                    </h3>
-                  </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
-                </div>
-                <div class="clear"></div>
-
-                <div class="excerpt">
-                  <p>Excerpt.</p>
-                </div>
-                <div class="clear"></div>
-              </li>
-              <!-- End Student 2 -->
 
               <!-- Begin Student 3 -->
               <li class="home-blog-post">
@@ -155,7 +108,7 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/Megan_Adams.html">Nobody</a>
                     </h3>
                   </div>
                   <p class="home-blog-post-meta">Tag Line</p>
@@ -173,14 +126,14 @@
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                    <img width="304" height="304" class="prof-image" src="img/students/megan_adams_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_name.html">Megan Adams</a>
                     </h3>
                   </div>
                   <p class="home-blog-post-meta">Tag Line</p>
@@ -188,7 +141,7 @@
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>Wow this is an amazing profile!</p>
                 </div>
                 <div class="clear"></div>
               </li>
